# snippets

./: README.md
docker/: Dockerfile  README.md
integrators/: time_integrator.py
metaclass/: README.md  pyproject.toml
metaclass/tests/validation/: test_model.py
metaclass/validation/: exceptions.py  fields.py  model.py
