[tool.poetry]
name = "validation"
version = "0.1.0"
description = ""
authors = ["erik <e.overmeire@proton.me>"]
readme = "README.md"
packages = [{include = "validation"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
